Update grid examples more

--- a/src/pages/docs/place-content.mdx
+++ b/src/pages/docs/place-content.mdx
@@ -26,7 +26,7 @@ Use `place-content-center` to pack items in the center of the block axis:
   </div>
 </template>
 
-<div class="**place-content-center** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-center** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -52,7 +52,7 @@ Use `place-content-start` to pack items against the start of the block axis:
   </div>
 </template>
 
-<div class="**place-content-start** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-start** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -78,7 +78,7 @@ Use `place-content-end` to to pack items against the end of the block axis:
   </div>
 </template>
 
-<div class="**place-content-end** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-end** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -104,7 +104,7 @@ Use `place-content-between` to distribute grid items along the block axis so tha
   </div>
 </template>
 
-<div class="**place-content-between** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-between** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -130,7 +130,7 @@ Use `place-content-around` distribute grid items such that there is an equal amo
   </div>
 </template>
 
-<div class="**place-content-around** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-around** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -156,7 +156,7 @@ Use `place-content-evenly` to distribute grid items such that they are evenly sp
   </div>
 </template>
 
-<div class="**place-content-evenly** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-evenly** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -182,7 +182,7 @@ Use `place-content-stretch` to stretch grid items along their grid areas on the 
   </div>
 </template>
 
-<div class="**place-content-stretch** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-content-stretch** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
