--- a/src/pages/docs/place-items.mdx
+++ b/src/pages/docs/place-items.mdx
@@ -25,7 +25,7 @@ Use `place-items-auto` to place grid items automatically in their grid areas:
   </div>
 </template>
 
-<div class="grid **place-items-auto** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-items-auto** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -51,7 +51,7 @@ Use `place-items-start` to place grid items on the start of their grid areas on 
   </div>
 </template>
 
-<div class="grid **place-items-start** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-items-start** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -77,7 +77,7 @@ Use `place-items-end` to place grid items on the end of their grid areas on both
   </div>
 </template>
 
-<div class="grid **place-items-end** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-items-end** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -103,7 +103,7 @@ Use `place-items-center` to place grid items on the center of their grid areas o
   </div>
 </template>
 
-<div class="grid **place-items-center** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-items-center** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -129,7 +129,7 @@ Use `place-items-stretch` to stretch items along their grid areas on both axis:
   </div>
 </template>
 
-<div class="grid **place-items-stretch** h-48 ...">
+<div class="grid grid-cols-3 gap-2 **place-items-stretch** h-48 ...">
     <div>1</div>
     <div>2</div>
     <div>3</div>
