--- a/src/pages/docs/place-self.mdx
+++ b/src/pages/docs/place-self.mdx
@@ -25,7 +25,7 @@ Use `place-self-auto` to align an item based on the value of the container's `pl
   </div>
 </template>
 
-<div class="grid ...">
+<div class="grid grid-cols-3 gap-2 ...">
     <div>1</div>
     <div class="**place-self-auto** ...">2</div>
     <div>3</div>
@@ -51,7 +51,7 @@ Use `place-self-start` to align an item to the start on both axes:
   </div>
 </template>
 
-<div class="grid ...">
+<div class="grid grid-cols-3 gap-2 ...">
     <div>1</div>
     <div class="**place-self-start** ...">2</div>
     <div>3</div>
@@ -77,7 +77,7 @@ Use `place-self-center` to align an item at the center on both axes:
   </div>
 </template>
 
-<div class="grid ...">
+<div class="grid grid-cols-3 gap-2 ...">
     <div>1</div>
     <div class="**place-self-center** ...">2</div>
     <div>3</div>
@@ -103,7 +103,7 @@ Use `place-self-end` to align an item to the end on both axes:
   </div>
 </template>
 
-<div class="grid ...">
+<div class="grid grid-cols-3 gap-2 ...">
     <div>1</div>
     <div class="**place-self-end** ...">2</div>
     <div>3</div>
@@ -129,7 +129,7 @@ Use `place-self-stretch` to stretch an item on both axes:
   </div>
 </template>
 
-<div class="grid ...">
+<div class="grid grid-cols-3 gap-2 ...">
     <div>1</div>
     <div class="**place-self-stretch** ...">2</div>
     <div>3</div>
