Update text-color examples

--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -32,13 +32,13 @@ export const classes = {
 Control the text color of an element using the `text-{color}` utilities.
 
 ```html
-<template preview class="text-center p-4">
-  <div class="text-purple-600 text-xl font-semibold truncate">
+<template preview>
+  <p class="text-purple-600 text-center text-xl font-semibold truncate">
     The quick brown fox jumped over the lazy dog.
-  </div>
+  </p>
 </template>
 
-<input class="text-purple-600 ...">
+<p class="text-purple-600 ..."></p>
 ```
 
 ### Changing opacity
