Update text opacity examples

--- a/src/pages/docs/text-opacity.mdx
+++ b/src/pages/docs/text-opacity.mdx
@@ -36,7 +36,7 @@ Note that because these utilities are implemented using CSS custom properties, a
 
 <TipBad>Don't try to use text opacity utilities on an inherited text color</TipBad>
 
-```html
+```html rose
 <div class="text-black">
   <div class="text-opacity-50">...</div>
 </div>
@@ -44,7 +44,7 @@ Note that because these utilities are implemented using CSS custom properties, a
 
 <TipGood>Do make sure to add a text color utility to the same element explicitly</TipGood>
 
-```html
+```html emerald
 <div class="text-black">
   <div class="text-black text-opacity-50">...</div>
 </div>
