Update text-align examples

--- a/src/pages/docs/text-align.mdx
+++ b/src/pages/docs/text-align.mdx
@@ -17,31 +17,37 @@ export const classes = { plugin }
 
 ## Usage
 
-Control the text alignment of an element using the `text-left`, `.text-center`, `.text-right`, and `.text-justify` utilities.
+Control the text alignment of an element using the `.text-left`, `.text-center`, `.text-right`, and `.text-justify` utilities.
 
-```html
+```html purple
 <template preview>
-  <div class="mb-6">
-    <p class="text-sm text-gray-600">.text-left</p>
-    <p class="text-left text-base text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
-  </div>
-  <div class="mb-6">
-    <p class="text-sm text-gray-600">.text-center</p>
-    <p class="text-center text-base text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
-  </div>
-  <div class="mb-6">
-    <p class="text-sm text-gray-600">.text-right</p>
-    <p class="text-right text-base text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
-  </div>
-  <div class="mb-6">
-    <p class="text-sm text-gray-600">.text-justify</p>
-    <p class="text-justify text-base text-gray-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
-  </div>
+  <p class="text-left font-flow leading-5 text-3xl text-purple-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
 </template>
 
 <p class="text-left ...">Lorem ipsum dolor sit amet ...</p>
+```
+
+```html rose
+<template preview>
+  <p class="text-center font-flow leading-5 text-3xl text-rose-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
+</template>
+
 <p class="text-center ...">Lorem ipsum dolor sit amet ...</p>
+```
+
+```html emerald
+<template preview>
+  <p class="text-right font-flow leading-5 text-3xl text-emerald-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
+</template>
+
 <p class="text-right ...">Lorem ipsum dolor sit amet ...</p>
+```
+
+```html amber
+<template preview>
+  <p class="text-justify font-flow leading-5 text-3xl text-amber-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
+</template>
+
 <p class="text-justify ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
