--- a/src/pages/docs/text-align.mdx
+++ b/src/pages/docs/text-align.mdx
@@ -24,7 +24,7 @@ Control the text alignment of an element using the `.text-left`, `.text-center`,
   <p class="text-left font-flow leading-5 text-3xl text-purple-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
 </template>
 
-<p class="text-left ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**text-left** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ```html rose
@@ -32,7 +32,7 @@ Control the text alignment of an element using the `.text-left`, `.text-center`,
   <p class="text-center font-flow leading-5 text-3xl text-rose-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
 </template>
 
-<p class="text-center ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**text-center** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ```html emerald
@@ -40,7 +40,7 @@ Control the text alignment of an element using the `.text-left`, `.text-center`,
   <p class="text-right font-flow leading-5 text-3xl text-emerald-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
 </template>
 
-<p class="text-right ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**text-right** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ```html amber
@@ -48,7 +48,7 @@ Control the text alignment of an element using the `.text-left`, `.text-center`,
   <p class="text-justify font-flow leading-5 text-3xl text-amber-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fugit, enim molestiae praesentium eveniet, recusandae et error beatae facilis ex harum consequuntur, quia pariatur non. Doloribus illo, ullam blanditiis ab.</p>
 </template>
 
-<p class="text-justify ...">Lorem ipsum dolor sit amet ...</p>
+<p class="**text-justify** ...">Lorem ipsum dolor sit amet ...</p>
 ```
 
 ## Responsive
