--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -38,7 +38,7 @@ Control the text color of an element using the `text-{color}` utilities.
   </p>
 </template>
 
-<p class="text-purple-600 ..."></p>
+<p class="**text-purple-600** ..."></p>
 ```
 
 ### Changing opacity
@@ -56,11 +56,11 @@ Control the opacity of an element's text color using the `text-opacity-{amount}`
   </div>
 </template>
 
-<p class="text-purple-700 text-opacity-100">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-75">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-50">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-25">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-0">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-100** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-75** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-50** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-25** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-0** ...">The quick brown fox ...</p>
 ```
 
 Learn more in the [text opacity documentation](/docs/text-opacity).
