--- a/src/pages/docs/text-opacity.mdx
+++ b/src/pages/docs/text-opacity.mdx
@@ -25,11 +25,11 @@ Control the opacity of an element's text color using the `text-opacity-{amount}`
   </div>
 </template>
 
-<p class="text-purple-700 text-opacity-100">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-75">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-50">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-25">The quick brown fox ...</p>
-<p class="text-purple-700 text-opacity-0">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-100** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-75** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-50** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-25** ...">The quick brown fox ...</p>
+<p class="text-purple-700 **text-opacity-0** ...">The quick brown fox ...</p>
 ```
 
 Note that because these utilities are implemented using CSS custom properties, a `.text-{color}` utility must be present on the same element for them to work.
